[gd_scene load_steps=17 format=2]

[ext_resource path="res://player/player_scripts/hitbox.gd" type="Script" id=1]
[ext_resource path="res://sfx/enemy_hit_1.wav" type="AudioStream" id=2]
[ext_resource path="res://enemies/enemy_sprites/red_slug.png" type="Texture" id=3]
[ext_resource path="res://enemies/hurtbox.gd" type="Script" id=4]
[ext_resource path="res://enemies/enemy_template.gd" type="Script" id=5]
[ext_resource path="res://ui/ui_theme.tres" type="Theme" id=6]

[sub_resource type="CapsuleShape2D" id=13]
radius = 7.00002
height = 12.0

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite/hitbox/col:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=20]
resource_name = "attack"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/hitbox/col:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=21]
resource_name = "death"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=18]
resource_name = "idle"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=19]
resource_name = "run"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 15, 8 )

[sub_resource type="CapsuleShape2D" id=15]
radius = 8.00004
height = 11.9999

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "hit"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.32549, 0.32549, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="enemy" type="KinematicBody2D" groups=["enemy"]]
modulate = Color( 0.14902, 0.14902, 0.14902, 1 )
collision_layer = 16
collision_mask = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -29.0 ]
}

[node name="col" type="CollisionShape2D" parent="."]
position = Vector2( -1, -7 )
rotation = 1.57079
shape = SubResource( 13 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 17 )
anims/attack = SubResource( 20 )
anims/death = SubResource( 21 )
anims/idle = SubResource( 18 )
anims/run = SubResource( 19 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 3 )
hframes = 8
vframes = 8

[node name="hitbox" type="Area2D" parent="sprite"]
position = Vector2( 2, 0 )
collision_layer = 8
collision_mask = 0
script = ExtResource( 1 )

[node name="col" type="CollisionShape2D" parent="sprite/hitbox"]
position = Vector2( 13, -1.90735e-06 )
shape = SubResource( 16 )
disabled = true

[node name="hurtbox" type="Area2D" parent="."]
position = Vector2( 0, 2 )
rotation = 1.57079
collision_layer = 0
collision_mask = 8
script = ExtResource( 4 )

[node name="col" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( -9.00001, 0.999944 )
shape = SubResource( 15 )

[node name="bar" type="Node2D" parent="."]
position = Vector2( 0, -5 )
scale = Vector2( 0.588451, 0.588451 )

[node name="hp_bar_bg" type="ColorRect" parent="bar"]
margin_left = -19.0
margin_top = -27.0
margin_right = 21.0
margin_bottom = 13.0
rect_scale = Vector2( 0.934831, 0.123988 )
color = Color( 0.596078, 0.545098, 0.670588, 1 )

[node name="hp_bar" type="ProgressBar" parent="bar"]
margin_left = -18.0
margin_top = -26.0
margin_right = 540.0
margin_bottom = 4.0
rect_scale = Vector2( 0.0633619, 0.103362 )
theme = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
value = 100.0
percent_visible = false

[node name="death_timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="attack_timer" type="Timer" parent="."]
one_shot = true

[node name="effects" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 22 )
anims/hit = SubResource( 23 )

[node name="sfx" type="Node2D" parent="."]

[node name="hit" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource( 2 )

[connection signal="body_entered" from="hurtbox" to="hurtbox" method="_on_area_entered"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
